Add handler to move card
